work3/top10songs/top10songs-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: top10songs
spec:
  selector:
    matchLabels:
      app: top10songs
  template:
    metadata:
      labels:
        app: top10songs
    spec:
      containers:
      - name: top10songs-container
        image: partha00011/top10songs
        #        resources:
        #          limits:
        #            memory: "128Mi"
        #            cpu: "200m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: top10songs-svc
spec:
  selector:
    app: top10songs
  ports:
  - port: 80
    targetPort: 80
