work3/top10songs/top10songs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: top10movies-ingress
  labels:
    name: top10movies
spec:
  ingressClassName: nginx
  rules:
  - host: topsongs.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: top10songs-svc
            port: 
              number: 80

        path: "/top10movies"
        backend:
          service:
            name: top10songs-svc
            port:
              number: 80
